--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "This assignment will help you stand up a web API using Express and the module that you produced for a03",
   "main": "server.js",
-  "type" : "module",
+  "type": "module",
   "scripts": {
     "test": "node server.js --port=5555"
   },
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/comp426-2022-fall/a04-corbinj47#readme",
   "dependencies": {
+    "curl": "^0.1.4",
     "express": "^4.18.2",
     "minimist": "^1.2.7"
   }
